bug fix; causing overflow from FR-animation rollout

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -88,16 +88,16 @@
       left: 0;
       width: 100%;
       height: 100%;
-      color: $primary-white;
+      color: $primary-black;
       background: rgba(0, 0, 0, 0.8);
-      transition: 0.7s ease-out;
+      background: $primary-white;
       line-height: 1.4;
-      opacity: 0;
+      // opacity: 0;
     }
 
-    :hover {
-      opacity: 1;
-    }
+    // :hover {
+    //   opacity: 1;
+    // }
 
     &__photocard-content {
       display: flex;
@@ -124,7 +124,7 @@
     &:hover {
       color: $primary-white;
       background-color: $primary-black;
-      transition: 0.6s ease-out;
+      transition: background-color 2.5s;
     }
   }
 }
